Git_to_Salesforce/ Q-assign/objects/Match_Field__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <referenceTo>Assignment_Group__c</referenceTo>
        <relationshipName>Match_Field_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QA Match Field Criteria</label>
    <nameField>
        <label>Match Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Match Field Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>